--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hook-form": "^7.54.0",
+    "react-icons": "^5.4.0",
     "slugify": "^1.6.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
