--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@datastax/astra-db-ts": "^1.5.0",
     "@hookform/resolvers": "^3.9.1",
+    "@langchain/openai": "^0.4.4",
     "@mdxeditor/editor": "^3.20.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -22,19 +24,24 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@uploadthing/react": "^7.1.5",
+    "@upstash/redis": "^1.34.4",
+    "ai": "^4.1.40",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cm6-theme-basic-dark": "^0.2.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
+    "langchain": "^0.3.15",
     "lucide-react": "^0.468.0",
     "mongoose": "^8.8.4",
     "next": "15.0.2",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "openai": "^4.85.1",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.4.2",
@@ -44,9 +51,11 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
     "slugify": "^1.6.6",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "uploadthing": "^7.4.4",
     "zod": "^3.23.8"
   },
@@ -66,6 +75,7 @@
   "packageManager": "npm@10.7.0",
   "overrides": {
     "react": "$react",
-    "react-dom": "$react-dom"
+    "react-dom": "$react-dom",
+    "@langchain/core": "0.3.40"
   }
 }
