--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.1.14",
+    "@ai-sdk/openai": "^1.1.11",
     "@datastax/astra-db-ts": "^1.5.0",
     "@hookform/resolvers": "^3.9.1",
     "@langchain/openai": "^0.4.4",
@@ -20,8 +22,9 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.2",
     "@uploadthing/react": "^7.1.5",
     "@upstash/redis": "^1.34.4",
@@ -35,6 +38,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
+    "framer-motion": "^11.18.2",
     "langchain": "^0.3.15",
     "lucide-react": "^0.468.0",
     "mongoose": "^8.8.4",
@@ -52,7 +56,11 @@
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.3",
+    "remark-gfm": "^4.0.1",
+    "remeda": "^2.20.1",
+    "shiki": "^2.3.2",
     "slugify": "^1.6.6",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
