--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@upstash/redis": "^1.34.4",
     "ai": "^4.1.40",
     "bcryptjs": "^2.4.3",
+    "bright": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cm6-theme-basic-dark": "^0.2.0",
@@ -44,6 +45,7 @@
     "mongoose": "^8.8.4",
     "next": "15.0.2",
     "next-auth": "^5.0.0-beta.25",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
     "openai": "^4.85.1",
     "pino": "^9.5.0",
