--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/google": "^1.1.14",
     "@ai-sdk/openai": "^1.1.11",
     "@datastax/astra-db-ts": "^1.5.0",
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^3.9.1",
     "@langchain/openai": "^0.4.4",
     "@mdxeditor/editor": "^3.20.0",
@@ -40,6 +41,7 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "framer-motion": "^11.18.2",
+    "gsap": "^3.12.7",
     "langchain": "^0.3.15",
     "lucide-react": "^0.468.0",
     "mongoose": "^8.8.4",
@@ -63,6 +65,7 @@
     "shiki": "^2.3.2",
     "slugify": "^1.6.6",
     "sonner": "^1.7.4",
+    "split-type": "^0.3.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
